argocd-apps-rd/grafana-http-redirect-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grafana-http-redirect-middleware
  namespace: monitoring
spec:
  redirectScheme:
    permanent: true
    scheme: https
