argocd-apps-rd/helm-dashboard-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: helm-dashboard-ingressroute
  namespace: helm-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`helm-dashboard.192.168.87.157.nip.io`)
      priority: 10
      services:
        - name: helm-dashboard
          port: 8080
  tls:
    secretName: helm-dashboard.192.168.87.157.nip.io
